# zinger_description

./: CMakeLists.txt  README.md  package.xml
config/: cratebot.yaml  test_joint_trajectory_publisher.yaml  test_velocity_publisher.yaml  zinger.yaml
launch/: base.launch.py  controller_manager.launch.py  controllers.launch.py  gazebo.launch  robot_description.launch.py  rviz.launch  test_joint_trajectory_controller.launch.py  test_velocity_controller.launch.py
rviz/: urdf.rviz
urdf/: base.xacro  gazebo.xacro  macros.xacro  materials.xacro
